fix spacing on mobile

--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 }
 
 .container {
-  padding: 1rem 3rem;
+  padding: 1rem;
   background: var(--color-bg-secondary);
   box-shadow: 0px 0px 2px #2b21265a;
   margin-bottom: 3rem;
@@ -366,6 +366,7 @@ footer {
 
   .container {
     max-width: 800px;
+    padding: 1rem 3rem;
   }
 
   .post-row h2 {
